--- a/userprofile.ui
+++ b/userprofile.ui
@@ -21,6 +21,9 @@ QWidget {background-color: rgb(255, 255, 255)}
   <layout class="QGridLayout" name="gridLayout_2">
    <item row="0" column="0">
     <layout class="QGridLayout" name="gridLayout">
+     <property name="verticalSpacing">
+      <number>10</number>
+     </property>
      <item row="1" column="1">
       <spacer name="verticalSpacer_2">
        <property name="orientation">
@@ -205,6 +208,12 @@ QWidget {background-color: rgb(255, 255, 255)}
        <property name="icon">
         <iconset>
          <normaloff>ChevronLeft-128.png</normaloff>ChevronLeft-128.png</iconset>
+       </property>
+       <property name="iconSize">
+        <size>
+         <width>32</width>
+         <height>32</height>
+        </size>
        </property>
        <property name="flat">
         <bool>true</bool>
