--- a/editdetails.ui
+++ b/editdetails.ui
@@ -330,25 +330,28 @@ QWidget {background-color: white}
      </item>
     </layout>
    </item>
-   <item row="2" column="0" alignment="Qt::AlignRight|Qt::AlignBottom">
-    <widget class="QPushButton" name="pushButton_2">
-     <property name="text">
-      <string>Save</string>
+   <item row="3" column="0">
+    <spacer name="verticalSpacer_4">
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
      </property>
-     <property name="icon">
-      <iconset theme="document-save">
-       <normaloff>.</normaloff>.</iconset>
-     </property>
-     <property name="iconSize">
+     <property name="sizeHint" stdset="0">
       <size>
-       <width>24</width>
-       <height>24</height>
+       <width>20</width>
+       <height>40</height>
       </size>
+     </property>
+    </spacer>
+   </item>
+   <item row="2" column="0" alignment="Qt::AlignHCenter">
+    <widget class="QDialogButtonBox" name="buttonBox">
+     <property name="standardButtons">
+      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
      </property>
     </widget>
    </item>
    <item row="1" column="0">
-    <spacer name="verticalSpacer_4">
+    <spacer name="verticalSpacer_5">
      <property name="orientation">
       <enum>Qt::Vertical</enum>
      </property>
