--- a/editdetails.ui
+++ b/editdetails.ui
@@ -75,7 +75,14 @@ QWidget {background-color: white}
          </widget>
         </item>
         <item>
-         <widget class="QComboBox" name="comboBox"/>
+         <widget class="QComboBox" name="comboBox">
+          <property name="minimumSize">
+           <size>
+            <width>200</width>
+            <height>40</height>
+           </size>
+          </property>
+         </widget>
         </item>
        </layout>
       </widget>
@@ -277,7 +284,7 @@ QWidget {background-color: white}
       </widget>
      </item>
      <item row="0" column="0" alignment="Qt::AlignLeft|Qt::AlignTop">
-      <widget class="QPushButton" name="pushButton">
+      <widget class="QPushButton" name="backButton">
        <property name="minimumSize">
         <size>
          <width>50</width>
