--- a/inventory.ui
+++ b/inventory.ui
@@ -20,19 +20,6 @@ QWidget {background-color: white}
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout_3">
-    <item row="0" column="0">
-     <spacer name="horizontalSpacer">
-      <property name="orientation">
-       <enum>Qt::Horizontal</enum>
-      </property>
-      <property name="sizeHint" stdset="0">
-       <size>
-        <width>40</width>
-        <height>20</height>
-       </size>
-      </property>
-     </spacer>
-    </item>
     <item row="0" column="1">
      <layout class="QGridLayout" name="gridLayout_2">
       <item row="0" column="0" colspan="3">
@@ -63,10 +50,17 @@ QWidget {background-color: white}
         </property>
        </spacer>
       </item>
-      <item row="2" column="2">
+      <item row="4" column="2">
        <layout class="QGridLayout" name="gridLayout">
-        <item row="7" column="0" colspan="2">
-         <widget class="QCheckBox" name="checkBox">
+        <item row="7" column="0">
+         <widget class="QPushButton" name="pushButton">
+          <property name="text">
+           <string>Add to Cart</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="0" colspan="2">
+         <widget class="QLabel" name="label_15">
           <property name="font">
            <font>
             <pointsize>14</pointsize>
@@ -75,7 +69,7 @@ QWidget {background-color: white}
            </font>
           </property>
           <property name="text">
-           <string>Add to Cart</string>
+           <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-style:italic;&quot;&gt;Microcontroller&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
           </property>
          </widget>
         </item>
@@ -117,6 +111,16 @@ QWidget {background-color: white}
           </property>
          </widget>
         </item>
+        <item row="7" column="1">
+         <widget class="QSpinBox" name="spinBox">
+          <property name="minimumSize">
+           <size>
+            <width>0</width>
+            <height>0</height>
+           </size>
+          </property>
+         </widget>
+        </item>
         <item row="2" column="0">
          <widget class="QLabel" name="label_3">
           <property name="font">
@@ -155,7 +159,7 @@ QWidget {background-color: white}
            </font>
           </property>
           <property name="text">
-           <string>Quantity:</string>
+           <string>Available Quantity:</string>
           </property>
          </widget>
         </item>
@@ -213,7 +217,7 @@ QWidget {background-color: white}
            </font>
           </property>
           <property name="text">
-           <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;Arduino UNO&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+           <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;ATMega328&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
           </property>
          </widget>
         </item>
@@ -229,23 +233,22 @@ QWidget {background-color: white}
           </property>
          </widget>
         </item>
-        <item row="1" column="0" colspan="2">
-         <widget class="QLabel" name="label_15">
-          <property name="font">
-           <font>
-            <pointsize>14</pointsize>
-            <weight>75</weight>
-            <bold>true</bold>
-           </font>
+        <item row="8" column="0">
+         <spacer name="verticalSpacer_4">
+          <property name="orientation">
+           <enum>Qt::Vertical</enum>
           </property>
-          <property name="text">
-           <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-style:italic;&quot;&gt;Microcontroller&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>20</width>
+            <height>40</height>
+           </size>
           </property>
-         </widget>
+         </spacer>
         </item>
        </layout>
       </item>
-      <item row="3" column="0" colspan="3">
+      <item row="6" column="0" colspan="3">
        <spacer name="verticalSpacer_2">
         <property name="orientation">
          <enum>Qt::Vertical</enum>
@@ -258,7 +261,7 @@ QWidget {background-color: white}
         </property>
        </spacer>
       </item>
-      <item row="5" column="0" colspan="3">
+      <item row="9" column="0" colspan="3">
        <spacer name="verticalSpacer_3">
         <property name="orientation">
          <enum>Qt::Vertical</enum>
@@ -271,24 +274,7 @@ QWidget {background-color: white}
         </property>
        </spacer>
       </item>
-      <item row="4" column="0" colspan="3" alignment="Qt::AlignHCenter">
-       <widget class="QDialogButtonBox" name="buttonBox">
-        <property name="standardButtons">
-         <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
-        </property>
-       </widget>
-      </item>
-      <item row="2" column="0">
-       <widget class="QTreeView" name="treeView">
-        <property name="minimumSize">
-         <size>
-          <width>400</width>
-          <height>350</height>
-         </size>
-        </property>
-       </widget>
-      </item>
-      <item row="2" column="1">
+      <item row="4" column="1">
        <spacer name="horizontalSpacer_3">
         <property name="orientation">
          <enum>Qt::Horizontal</enum>
@@ -301,7 +287,44 @@ QWidget {background-color: white}
         </property>
        </spacer>
       </item>
+      <item row="8" column="0" colspan="3" alignment="Qt::AlignHCenter">
+       <widget class="QDialogButtonBox" name="buttonBox">
+        <property name="standardButtons">
+         <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
+        </property>
+       </widget>
+      </item>
+      <item row="5" column="2">
+       <widget class="QPushButton" name="cartButton">
+        <property name="text">
+         <string>View Cart</string>
+        </property>
+       </widget>
+      </item>
+      <item row="4" column="0" rowspan="2">
+       <widget class="QTreeView" name="treeView">
+        <property name="minimumSize">
+         <size>
+          <width>400</width>
+          <height>350</height>
+         </size>
+        </property>
+       </widget>
+      </item>
      </layout>
+    </item>
+    <item row="0" column="0">
+     <spacer name="horizontalSpacer">
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
+      </property>
+      <property name="sizeHint" stdset="0">
+       <size>
+        <width>40</width>
+        <height>20</height>
+       </size>
+      </property>
+     </spacer>
     </item>
     <item row="0" column="2">
      <spacer name="horizontalSpacer_2">
