--- a/userprofile.ui
+++ b/userprofile.ui
@@ -37,14 +37,14 @@ QWidget {background-color: rgb(255, 255, 255)}
        </property>
       </spacer>
      </item>
-     <item row="6" column="1">
+     <item row="7" column="1">
       <widget class="QPushButton" name="resetPinButton">
        <property name="text">
         <string>Reset PIN</string>
        </property>
       </widget>
      </item>
-     <item row="7" column="1">
+     <item row="9" column="1">
       <spacer name="verticalSpacer">
        <property name="orientation">
         <enum>Qt::Vertical</enum>
@@ -90,7 +90,7 @@ QWidget {background-color: rgb(255, 255, 255)}
        </property>
       </widget>
      </item>
-     <item row="4" column="1">
+     <item row="5" column="1">
       <widget class="QPushButton" name="requestButton">
        <property name="text">
         <string>Purchase Request</string>
@@ -101,7 +101,7 @@ QWidget {background-color: rgb(255, 255, 255)}
        </property>
       </widget>
      </item>
-     <item row="5" column="1">
+     <item row="6" column="1">
       <widget class="QPushButton" name="editDetailsButton">
        <property name="text">
         <string>Edit Details</string>
@@ -133,6 +133,13 @@ QWidget {background-color: rgb(255, 255, 255)}
         </size>
        </property>
       </spacer>
+     </item>
+     <item row="4" column="1">
+      <widget class="QPushButton" name="cartButton">
+       <property name="text">
+        <string>View Cart</string>
+       </property>
+      </widget>
      </item>
     </layout>
    </item>
